# install-truth-guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ja.md  README-jp.md  README-zh.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/install_truth_guard/: __init__.py  __main__.py  cli.py  parser.py  registry.py
tests/: test_cli.py  test_parser.py  test_project_files.py  test_registry.py
