[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "install-truth-guard"
version = "0.1.0"
description = "Check README install commands against real package publication status."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "install-truth-guard contributors" },
]
keywords = ["readme", "ci", "package-registry", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
install-truth-guard = "install_truth_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/install_truth_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
